...
        <item
            android:id="@+id/drawer_menu_subscriptions"
            android:title="@string/drawer_menu_subscriptions"
            android:icon="@drawable/ic_subscriptions"
            android:iconTint="@color/colorPrimary"/>
        <item
            android:id="@+id/drawer_menu_settings"
            android:title="@string/drawer_menu_settings"
            android:icon="@drawable/ic_settings"
            android:iconTint="@color/colorPrimary"/>
    </group>
</menu>
