<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="fragment"
            type="meet_eat.app.fragment.login.LoginFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_fragment_login">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:paddingStart="65dp"
            android:paddingTop="20dp"
            android:paddingEnd="50dp"
            android:scaleType="fitCenter"
            android:src="@drawable/title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/content_description_app_title" />

        <EditText
            android:id="@+id/etLoginEmail"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="16dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/bg_edit_text"
            android:drawableEnd="@drawable/mail"
            android:drawablePadding="16dp"
            android:drawableTint="@color/colorPrimary"
            android:elevation="50dp"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@={fragment.email}"
            android:textColor="@android:color/white"
            android:textColorHint="@color/textHint"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.65" />

        <EditText
            android:id="@+id/etLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="16dp"
            android:autofillHints="password"
            android:background="@drawable/bg_edit_text"
            android:drawableEnd="@drawable/lock"
            android:drawablePadding="16dp"
            android:drawableTint="@color/colorPrimary"
            android:elevation="50dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingStart="20dp"
            android:paddingEnd="23dp"
            android:text="@={fragment.password}"
            android:textColor="@android:color/white"
            android:textColorHint="@color/textHint"
            app:layout_constraintTop_toBottomOf="@+id/etLoginEmail"
            tools:layout_editor_absoluteX="16dp" />

        <TextView
            android:id="@+id/tvLoginReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:clickable="true"
            android:elevation="5dp"
            android:focusable="true"
            android:shadowColor="@android:color/black"
            android:shadowRadius="10"
            android:text="@string/reset_password"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etLoginPassword" />

        <Button
            android:id="@+id/btLogin"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/bg_button"
            android:elevation="20dp"
            android:text="@string/login"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btLoginRegister"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btLoginRegister"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/bg_button"
            android:elevation="20dp"
            android:text="@string/register"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btLogin" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>