<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="on_back_pressed_message">Press back again to leave.</string>
    <string name="invalid_date_time_interval">Time interval invalid.</string>
    <string name="missing_date_time">Time cannot be empty.</string>
    <string name="sort_spinner_item_time">Time until meeting</string>
    <string name="invalid_date_time_past">Time specification lies is in the past.</string>
    <string name="date_time">Time</string>
    <string name="report_message">Why do you want to report the user or the offer?</string>
    <string name="publish">Publish</string>
    <string name="bad_password">Invalid password.</string>
    <string name="invalid_price">Invalid price indication.</string>
    <string name="bad_email">Invalid e-mail.</string>
    <string name="invalid_max_participants">Invalid number of participants.</string>
    <string name="bad_login">Invalid credentials.</string>
    <string name="date_format">DD.MM.YYYY</string>
    <string name="missing_title">Title must not be empty.</string>
    <string name="phone_number">Phone number</string>
    <string name="invalid_participants_interval">Invalid participant interval.</string>
    <string name="missing_participants">Participant field must not be empty.</string>
    <string name="max_participants_to_low">Already more participants than the new maximum value.</string>
    <string name="participants">Participants</string>
    <string name="participate">Participate</string>
    <string name="standard">Standard</string>
    <string name="city">City</string>
    <string name="save">Save</string>
    <string name="date_time_max">latest</string>
    <string name="sort">Sort by</string>
    <string name="contact_accept">Send</string>
    <string name="register">Register</string>
    <string name="delete_profile">Delete profile</string>
    <string name="profile_edit_success">Profile successfully processed.</string>
    <string name="profile_description">Profile description</string>
    <string name="drawer_menu_profile">Profile</string>
    <string name="invalid_price_interval">Price interval invalid.</string>
    <string name="missing_price">Price must not be empty.</string>
    <string name="price">Price</string>
    <string name="sort_spinner_item_price">Price</string>
    <string name="reset_password">Forgot password?</string>
    <string name="invalid_password">Password incorrect.</string>
    <string name="password_changed">Password changed successfully.</string>
    <string name="password">Password</string>
    <string name="invalid_location">Location not found.</string>
    <string name="missing_location">Place must not be empty.</string>
    <string name="new_password">New password</string>
    <string name="delete_profile_info">Do you really want to delete your profile? Your information will be deleted and cannot be restored. Please confirm your request with your password.</string>
    <string name="minutes">minutes</string>
    <string name="min">min</string>
    <string name="report">Report</string>
    <string name="drawer_menu_my_offers">My Offers</string>
    <string name="max">max</string>
    <string name="delete_offer">Delete</string>
    <string name="contact">Contact</string>
    <string name="contactRequest">Contact request</string>
    <string name="distance_unit">km</string>
    <string name="bright">Bright</string>
    <string name="home">Home</string>
    <string name="drawer_menu_main_offers">All offers</string>
    <string name="drawer_menu_bookmarked">Bookmarked</string>
    <string name="reported_toast_text">reported.</string>
    <string name="host_rating">Host rating</string>
    <string name="sort_spinner_item_host_rating">Host rating</string>
    <string name="guest_rating">Guest rating</string>
    <string name="date_time_min">earliest</string>
    <string name="filter_and_sort">Filter and sort</string>
    <string name="filter">Filter</string>
    <string name="toast_error_message">An error has occurred.</string>
    <string name="notification_hint">Receive a notification before each meeting you participate in.</string>
    <string name="invalid_distance_interval">Distance interval invalid.</string>
    <string name="distance">Distance</string>
    <string name="sort_spinner_item_distance">Distance</string>
    <string name="settings">Settings</string>
    <string name="drawer_menu_settings">Settings</string>
    <string name="about">Some buttons have been disabled and thus been grayed out. They are for presentation purposes only and represent functions that are not yet implemented.</string>
    <string name="dark">Dark</string>
    <string name="participating">You\'re already participating.</string>
    <string name="contact_text">A user asks for your contact details. Choose if you want to send him your contact details and if so, which ones.</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="missing_date">Date must not be empty.</string>
    <string name="appearance">Appearance</string>
    <string name="invalid_rating_interval">Rating interval invalid.</string>
    <string name="rating">Rating</string>
    <string name="rate">Rate</string>
    <string name="missing_description">Description must not be empty.</string>
    <string name="missing_username">Username must not be empty.</string>
    <string name="username">Username</string>
    <string name="contact_info">User</string>
    <string name="notification">Notification</string>
    <string name="sort_spinner_item_amount_participants">Amount of participants</string>
    <string name="login">Login</string>
    <string name="title">Offer title</string>
    <string name="picture">offer image</string>
    <string name="offer_description">Offer description</string>
    <string name="request_sent">Request sent.</string>
    <string name="change_password">Change</string>
    <string name="passwords_matching">New password should not be the old password.</string>
    <string name="invalid_old_password">Old password incorrect.</string>
    <string name="old_password">Old password</string>
    <string name="bad_passwords">Old or new password invalid.</string>
    <string name="profile_user_age">Age:</string>
    <string name="cancel">Cancel</string>
    <string name="subscribed">Subscribed users</string>
    <string name="subscribe">Subscribe</string>
    <string name="edit_subscriptions">Subscriptions</string>
    <string name="drawer_menu_subscriptions">Subscriptions</string>
    <string name="logout">Logout</string>
    <string name="contact_decline">Reject</string>
    <string name="currency">€</string>
    <string name="european_time_calling">" o'clock"</string>
    <string name="invalid_date_time_future">Time is in the future.</string>
    <string name="app_name" translatable="false">Meet &amp; Eat</string>
    <string name="e_mail" translatable="false">E-Mail</string>
    <string name="tag" translatable="false">Tag</string>
    <string name="map_api_key" translatable="false">api</string>
    <string name="add_tag" translatable="false">+ Tag</string>
    <string name="whitespace" translatable="false">&#160;</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="european_date_format" translatable="false">dd.MM.yyyy</string>
    <string name="european_time_format" translatable="false">HH:mm</string>
    <string name="decimal_format" translatable="false">%.2f</string>
    <string name="password_confirm">Password confirmation</string>
    <string name="passwords_not_matching">Passwords are not matching.</string>
    <string name="content_description_app_title">App title</string>
    <string name="content_description_back_button">Back button</string>
    <string name="content_description_background_image">Background image</string>
    <string name="content_description_offer_image">Offer image</string>
    <string name="content_description_spacer">Spacer</string>
    <string name="report_button">Report button</string>
    <string name="bookmark_button">Bookmark button</string>
    <string name="creator_image">Creator image</string>
    <string name="creator_rating_star">Creator rating star</string>
    <string name="content_description_offer_image_edit_button">Offer image edit button</string>
    <string name="content_description_add_offer_button">Add offer button</string>
    <string name="content_description_filter_offer_button">Filter offer button</string>
    <string name="content_description_edit_profile_button">Edit profile button</string>
    <string name="content_description_profile_image">Profile image</string>
    <string name="content_description_profile_host_rating_star">Profile host rating star</string>
    <string name="content_description_profile_edit_image">Profile edit image</string>
    <string name="content_description_profile_edit_image_button">Profile edit image button</string>
    <string name="content_description_add_profile_image_button">Add profile image button</string>
    <string name="content_description_settings_info_image">Settings info image</string>
    <string name="content_description_offer_card_frame">Offer card frame</string>
    <string name="content_description_bookmark_button">Bookmark button</string>
    <string name="content_description_remove_subscription_button">Remove subscription button</string>
    <string name="content_description_app_logo">App logo</string>
    <string name="content_description_offer_edit_button">Offer edit button</string>
    <string name="content_description_profile_guest_rating_star">Profile guest rating star</string>
    <string name="content_description_offer_card_rating">Offer card rating</string>
    <string name="content_description_report_button">Report button</string>
    <string name="report_info_offer">Offer:</string>
    <string name="report_info_user">User:</string>
    <string name="reset">Reset</string>
</resources>